T6-CC-Trabalho-Final/PixelArtParser.py
# Generated from PixelArt.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PixelArtParser ( Parser ):

    grammarFileName = "PixelArt.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'canvas'", "'x'", "'background'", 
                     "'palette'", "'{'", "'}'", "'='", "'shape'", "'draw'", 
                     "'pixel'", "'rect'", "'to'", "'line'", "'circle'", 
                     "'center'", "'radius'", "'ellipse'", "'rx'", "'ry'", 
                     "'star'", "'points'", "'triangle'", "'square'", "'size'", 
                     "'rhombus'", "'width'", "'height'", "'brazilFlag'", 
                     "'drawShape'", "'at'", "'rotate'", "'flip'", "'horizontal'", 
                     "'vertical'", "'both'", "'('", "'-'", "'+'", "','", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUM", "IDENT", "HEX_COLOR", 
                      "STRING", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_definicaoImport = 1
    RULE_definicaoCanvas = 2
    RULE_definicaoPalette = 3
    RULE_definicaoCor = 4
    RULE_definicaoShape = 5
    RULE_definicaoDraw = 6
    RULE_comando = 7
    RULE_cmdPixel = 8
    RULE_cmdRect = 9
    RULE_cmdLine = 10
    RULE_cmdCircle = 11
    RULE_cmdEllipse = 12
    RULE_cmdStar = 13
    RULE_cmdTriangle = 14
    RULE_cmdSquare = 15
    RULE_cmdRhombus = 16
    RULE_cmdBrazilFlag = 17
    RULE_cmdDrawShape = 18
    RULE_shapeModifier = 19
    RULE_coordenada = 20

    ruleNames =  [ "programa", "definicaoImport", "definicaoCanvas", "definicaoPalette", 
                   "definicaoCor", "definicaoShape", "definicaoDraw", "comando", 
                   "cmdPixel", "cmdRect", "cmdLine", "cmdCircle", "cmdEllipse", 
                   "cmdStar", "cmdTriangle", "cmdSquare", "cmdRhombus", 
                   "cmdBrazilFlag", "cmdDrawShape", "shapeModifier", "coordenada" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    NUM=42
    IDENT=43
    HEX_COLOR=44
    STRING=45
    WS=46
    COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PixelArtParser.EOF, 0)

        def definicaoImport(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PixelArtParser.DefinicaoImportContext)
            else:
                return self.getTypedRuleContext(PixelArtParser.DefinicaoImportContext,i)


        def definicaoCanvas(self):
            return self.getTypedRuleContext(PixelArtParser.DefinicaoCanvasContext,0)


        def definicaoPalette(self):
            return self.getTypedRuleContext(PixelArtParser.DefinicaoPaletteContext,0)


        def definicaoShape(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PixelArtParser.DefinicaoShapeContext)
            else:
                return self.getTypedRuleContext(PixelArtParser.DefinicaoShapeContext,i)


        def definicaoDraw(self):
            return self.getTypedRuleContext(PixelArtParser.DefinicaoDrawContext,0)


        def getRuleIndex(self):
            return PixelArtParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = PixelArtParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 42
                self.definicaoImport()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 48
                self.definicaoCanvas()


            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 51
                self.definicaoPalette()


            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 54
                self.definicaoShape()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 60
                self.definicaoDraw()


            self.state = 63
            self.match(PixelArtParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicaoImportContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(PixelArtParser.STRING, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_definicaoImport

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicaoImport" ):
                listener.enterDefinicaoImport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicaoImport" ):
                listener.exitDefinicaoImport(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicaoImport" ):
                return visitor.visitDefinicaoImport(self)
            else:
                return visitor.visitChildren(self)




    def definicaoImport(self):

        localctx = PixelArtParser.DefinicaoImportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definicaoImport)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(PixelArtParser.T__0)
            self.state = 66
            self.match(PixelArtParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicaoCanvasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(PixelArtParser.NUM)
            else:
                return self.getToken(PixelArtParser.NUM, i)

        def HEX_COLOR(self):
            return self.getToken(PixelArtParser.HEX_COLOR, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_definicaoCanvas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicaoCanvas" ):
                listener.enterDefinicaoCanvas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicaoCanvas" ):
                listener.exitDefinicaoCanvas(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicaoCanvas" ):
                return visitor.visitDefinicaoCanvas(self)
            else:
                return visitor.visitChildren(self)




    def definicaoCanvas(self):

        localctx = PixelArtParser.DefinicaoCanvasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definicaoCanvas)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(PixelArtParser.T__1)
            self.state = 69
            self.match(PixelArtParser.NUM)
            self.state = 70
            self.match(PixelArtParser.T__2)
            self.state = 71
            self.match(PixelArtParser.NUM)
            self.state = 72
            self.match(PixelArtParser.T__3)
            self.state = 73
            self.match(PixelArtParser.HEX_COLOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicaoPaletteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definicaoCor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PixelArtParser.DefinicaoCorContext)
            else:
                return self.getTypedRuleContext(PixelArtParser.DefinicaoCorContext,i)


        def getRuleIndex(self):
            return PixelArtParser.RULE_definicaoPalette

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicaoPalette" ):
                listener.enterDefinicaoPalette(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicaoPalette" ):
                listener.exitDefinicaoPalette(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicaoPalette" ):
                return visitor.visitDefinicaoPalette(self)
            else:
                return visitor.visitChildren(self)




    def definicaoPalette(self):

        localctx = PixelArtParser.DefinicaoPaletteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_definicaoPalette)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(PixelArtParser.T__4)
            self.state = 76
            self.match(PixelArtParser.T__5)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 77
                self.definicaoCor()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(PixelArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicaoCorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PixelArtParser.IDENT, 0)

        def HEX_COLOR(self):
            return self.getToken(PixelArtParser.HEX_COLOR, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_definicaoCor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicaoCor" ):
                listener.enterDefinicaoCor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicaoCor" ):
                listener.exitDefinicaoCor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicaoCor" ):
                return visitor.visitDefinicaoCor(self)
            else:
                return visitor.visitChildren(self)




    def definicaoCor(self):

        localctx = PixelArtParser.DefinicaoCorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_definicaoCor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PixelArtParser.IDENT)
            self.state = 86
            self.match(PixelArtParser.T__7)
            self.state = 87
            self.match(PixelArtParser.HEX_COLOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicaoShapeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PixelArtParser.IDENT, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PixelArtParser.ComandoContext)
            else:
                return self.getTypedRuleContext(PixelArtParser.ComandoContext,i)


        def getRuleIndex(self):
            return PixelArtParser.RULE_definicaoShape

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicaoShape" ):
                listener.enterDefinicaoShape(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicaoShape" ):
                listener.exitDefinicaoShape(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicaoShape" ):
                return visitor.visitDefinicaoShape(self)
            else:
                return visitor.visitChildren(self)




    def definicaoShape(self):

        localctx = PixelArtParser.DefinicaoShapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definicaoShape)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PixelArtParser.T__8)
            self.state = 90
            self.match(PixelArtParser.IDENT)
            self.state = 91
            self.match(PixelArtParser.T__5)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1705302016) != 0):
                self.state = 92
                self.comando()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(PixelArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicaoDrawContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PixelArtParser.ComandoContext)
            else:
                return self.getTypedRuleContext(PixelArtParser.ComandoContext,i)


        def getRuleIndex(self):
            return PixelArtParser.RULE_definicaoDraw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicaoDraw" ):
                listener.enterDefinicaoDraw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicaoDraw" ):
                listener.exitDefinicaoDraw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicaoDraw" ):
                return visitor.visitDefinicaoDraw(self)
            else:
                return visitor.visitChildren(self)




    def definicaoDraw(self):

        localctx = PixelArtParser.DefinicaoDrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_definicaoDraw)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(PixelArtParser.T__9)
            self.state = 101
            self.match(PixelArtParser.T__5)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1705302016) != 0):
                self.state = 102
                self.comando()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(PixelArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdPixel(self):
            return self.getTypedRuleContext(PixelArtParser.CmdPixelContext,0)


        def cmdRect(self):
            return self.getTypedRuleContext(PixelArtParser.CmdRectContext,0)


        def cmdLine(self):
            return self.getTypedRuleContext(PixelArtParser.CmdLineContext,0)


        def cmdCircle(self):
            return self.getTypedRuleContext(PixelArtParser.CmdCircleContext,0)


        def cmdEllipse(self):
            return self.getTypedRuleContext(PixelArtParser.CmdEllipseContext,0)


        def cmdStar(self):
            return self.getTypedRuleContext(PixelArtParser.CmdStarContext,0)


        def cmdTriangle(self):
            return self.getTypedRuleContext(PixelArtParser.CmdTriangleContext,0)


        def cmdSquare(self):
            return self.getTypedRuleContext(PixelArtParser.CmdSquareContext,0)


        def cmdRhombus(self):
            return self.getTypedRuleContext(PixelArtParser.CmdRhombusContext,0)


        def cmdBrazilFlag(self):
            return self.getTypedRuleContext(PixelArtParser.CmdBrazilFlagContext,0)


        def cmdDrawShape(self):
            return self.getTypedRuleContext(PixelArtParser.CmdDrawShapeContext,0)


        def getRuleIndex(self):
            return PixelArtParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = PixelArtParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comando)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.cmdPixel()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.cmdRect()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.cmdLine()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.cmdCircle()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.cmdEllipse()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 6)
                self.state = 115
                self.cmdStar()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 7)
                self.state = 116
                self.cmdTriangle()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 8)
                self.state = 117
                self.cmdSquare()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 9)
                self.state = 118
                self.cmdRhombus()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 10)
                self.state = 119
                self.cmdBrazilFlag()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 11)
                self.state = 120
                self.cmdDrawShape()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdPixelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordenada(self):
            return self.getTypedRuleContext(PixelArtParser.CoordenadaContext,0)


        def IDENT(self):
            return self.getToken(PixelArtParser.IDENT, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_cmdPixel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdPixel" ):
                listener.enterCmdPixel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdPixel" ):
                listener.exitCmdPixel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdPixel" ):
                return visitor.visitCmdPixel(self)
            else:
                return visitor.visitChildren(self)




    def cmdPixel(self):

        localctx = PixelArtParser.CmdPixelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmdPixel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(PixelArtParser.T__10)
            self.state = 124
            self.coordenada()
            self.state = 125
            self.match(PixelArtParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdRectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordenada(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PixelArtParser.CoordenadaContext)
            else:
                return self.getTypedRuleContext(PixelArtParser.CoordenadaContext,i)


        def IDENT(self):
            return self.getToken(PixelArtParser.IDENT, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_cmdRect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdRect" ):
                listener.enterCmdRect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdRect" ):
                listener.exitCmdRect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdRect" ):
                return visitor.visitCmdRect(self)
            else:
                return visitor.visitChildren(self)




    def cmdRect(self):

        localctx = PixelArtParser.CmdRectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmdRect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(PixelArtParser.T__11)
            self.state = 128
            self.coordenada()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 129
                self.match(PixelArtParser.T__12)


            self.state = 132
            self.coordenada()
            self.state = 133
            self.match(PixelArtParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordenada(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PixelArtParser.CoordenadaContext)
            else:
                return self.getTypedRuleContext(PixelArtParser.CoordenadaContext,i)


        def IDENT(self):
            return self.getToken(PixelArtParser.IDENT, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_cmdLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdLine" ):
                listener.enterCmdLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdLine" ):
                listener.exitCmdLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdLine" ):
                return visitor.visitCmdLine(self)
            else:
                return visitor.visitChildren(self)




    def cmdLine(self):

        localctx = PixelArtParser.CmdLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cmdLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(PixelArtParser.T__13)
            self.state = 136
            self.coordenada()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 137
                self.match(PixelArtParser.T__12)


            self.state = 140
            self.coordenada()
            self.state = 141
            self.match(PixelArtParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdCircleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordenada(self):
            return self.getTypedRuleContext(PixelArtParser.CoordenadaContext,0)


        def NUM(self):
            return self.getToken(PixelArtParser.NUM, 0)

        def IDENT(self):
            return self.getToken(PixelArtParser.IDENT, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_cmdCircle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdCircle" ):
                listener.enterCmdCircle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdCircle" ):
                listener.exitCmdCircle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdCircle" ):
                return visitor.visitCmdCircle(self)
            else:
                return visitor.visitChildren(self)




    def cmdCircle(self):

        localctx = PixelArtParser.CmdCircleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cmdCircle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(PixelArtParser.T__14)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 144
                self.match(PixelArtParser.T__15)


            self.state = 147
            self.coordenada()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 148
                self.match(PixelArtParser.T__16)


            self.state = 151
            self.match(PixelArtParser.NUM)
            self.state = 152
            self.match(PixelArtParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdEllipseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordenada(self):
            return self.getTypedRuleContext(PixelArtParser.CoordenadaContext,0)


        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(PixelArtParser.NUM)
            else:
                return self.getToken(PixelArtParser.NUM, i)

        def IDENT(self):
            return self.getToken(PixelArtParser.IDENT, 0)

        def getRuleIndex(self):
            return PixelArtParser.RULE_cmdEllipse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdEllipse" ):
                listener.enterCmdEllipse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdEllipse" ):
                listener.exitCmdEllipse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdEllipse" ):
                return visitor.visitCmdEllipse(self)
            else:
                return visitor.visitChildren(self)




    def cmdEllipse(self):

        localctx = PixelArtParser.CmdEllipseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cmdEllipse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(PixelArtParser.T__17)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 155
                self.match(PixelArtParser.T__15)


            self.state = 158
            self.coordenada()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 159
                self.match(PixelArtParser.T__18)


            self.state = 162
            self.match(PixelArtParser.NUM)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 163
                self.match(PixelArtParser.T__19)


            self.state = 166
            self.match(PixelArtParser.NUM)
            self.state = 167
            self.match(PixelArtParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdStarContext(ParserRuleContext):
        __slots__ = 'parser'
